Fixed MÁS SOBRE NOSOTROS image sizes and added grid gap to the class.

--- a/grid.css
+++ b/grid.css
@@ -387,6 +387,7 @@ input {
 .grid-image-first{
     display: grid;
     grid-template-columns: auto;
+    grid-gap: var(--gutter);
 }
 .image-top-first-round{
     grid-row: 1;
